# ternary-fabric

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  TFMBS_DEVICE_SPEC.md  TFMBS_Research_Paper.md  TFMBS_Research_Paper.tex  USER_MANUAL.md  WHITE_PAPER.md  gen_mem.py  inputs.mem  roadmap.md  smoke_test.py  test_mock.py  test_suite.sh  weights.mem
.github/workflows/: ci.yml
archive/: PHASE_5_REPORT.md  SUMMARY.md  benchmark_summary_18.md  llama.cpp_roadmap.md  llama.cpp_roadmap_progress.md
benchmarks/: Makefile  density_metrics.csv  gemm_metrics.csv  layer1_synthetic.c  layer2_kernels.c  lstm_metrics.csv  run_all.sh  saturation_metrics.csv  temporal_metrics.csv
benchmarks/gemm/: attn_bench  attn_bench.c  conv3d_bench  conv3d_bench.c  gemm_bench.c
benchmarks/lstm/: lstm_bench.c
benchmarks/synthetic/: density.c  saturation.c  sparse_stress.c
benchmarks/temporal/: lstm_persistent.c
docs/: 00_OVERVIEW.md  01_INSTALL.md  02_QUICK_START.md  03_HARDWARE.md  04_MEMORY_MAP.md  05_TFD.md  06_KERNELS.md  07_API.md  08_PROFILING.md  09_TUTORIALS.md  10_APPENDICES.md  11_MULTI_TILE.md  12_PYTORCH.md  13_BATCHING.md  14_GGUF.md  16_PRODUCTION_HARDENING.md  17_DEV_EXPERIENCE.md  18_WORKLOADS_METRICS.md  19_DATA_DRIVEN_ADAPTATION.md  20_LEARNING_AND_SELF_TUNING.md  21_MULTI_FABRIC_ORCHESTRATION.md  ARCHITECTURE.md  FABRIC_ILLUSION_CONTRACT.md  FPGA_VERIFICATION_CHECKLIST.md  PHASE3_INTEGRATION_HANDOFF.md  PHASE_18_SPEC.md  PUBLIC_READINESS.md  ROADMAP.md  TFMBS_Research_Paper.md  compiler_track_plan.md  hardware_verification_report.md  synthesis_report.md  visuals.md
examples/: dma_loader_demo.py  inference_demo.py  inference_pipeline.py  mnist_ternary.ipynb  multi_tile_tgemm.py  profile_sparsity.py  profiling_example.py  pytorch_mnist_ternary.py  quick_start.py  tiny_transformer.ipynb
include/: tfmbs.h  tfmbs_api.h  tfmbs_device.h  tfmbs_dma_regs.h  uapi_tfmbs.h
logs/: adaptive_history.json
specs/: AI_ACCELERATION.md  EXECUTION_MODEL.md  FRAME_MODEL.md  INTERCONNECT.md  TERNARY_MEMORY_BUS.md  TFMBS_DEVICE_SPEC.md  device_driver_interface.md  dma_strategy.md
src/: fabric_emulator.c  fabric_emulator.h  fabric_net.c  fabric_net.h  libtfmbs_api.c  libtfmbs_device.c  libtfmbs_intercept.c  mediator_mock.c  reference_tfmbs.c  tfmbs_driver.h  tfmbs_driver_mock.c
src/hw/: axi_interconnect_v1.v  frame_controller.v  pt5_unpacker.v  tb_fabric_full.v  tb_tgemm.v  tb_vector_system.v  ternary_fabric.xdc  ternary_fabric_top.v  ternary_lane_alu.v  ternary_sram_dense.v  ternary_sram_wrapper.v  vector_engine.v  weights.mem
src/mlir/: TfmbsDialect.cpp  TfmbsDialect.h  TfmbsOps.cpp  TfmbsOps.cpp.inc  TfmbsOps.h.inc  TfmbsOps.td  TfmbsPassPlugin.cpp  TfmbsPasses.cpp  TfmbsPasses.h
src/pytfmbs/: __init__.py  adaptive_agent.py  constants.py  core.c  gguf.py  setup.py  torch.py  torch_backend.py  torch_integration.py
tests/: bench_top.cpp  benchmark_gemm.py  demo_verify.sh  fpga_hello_world.c  gen_vectors.py  golden_parity.py  hardware_bridge.py  mock_llama.c  profile_throughput.py  tb_pt5_unpacker.v  test_adaptive.c  test_async.c  test_convergence.c  test_device.c  test_dma_driver.c  test_dynamic_detection.c  test_eviction.c  test_gguf.py  test_kernels.py  test_multi_node_fault.c  test_multi_tile.c  test_multi_tile.py  test_phase10.c  test_phase13.py  test_phase20_learning.c  test_phase21_multi_fabric.c  test_phase6.py  test_pytorch.py  test_torch_shadowing.py
tests/mlir/: TfmbsPassTest.cpp  lit.cfg  run_tfmbs_to_linalg.py  tfmbs_conv_attention.mlir  tfmbs_fusion.mlir  (+5 more)
tools/: adaptive_dashboard.py  benchmark_performance.sh  benchmark_suite.py  capture_dma_telemetry.py  compare_sim_hw.py  gguf_mock.py  hydration_benchmark.py  make_demo.py  parse_bench_results.py  plot_metrics.py  pt5_codec.py  quantize.py  reference_integration.py  run_hw_dma_telemetry.sh  run_tfmbs_regression.sh  synth.tcl  ternary_cli.py  ternary_conv3d_ref.py  ternary_kernel_sim.py  tf-cli.py  tfmbs-run  tfmbs_cli.py  torch_to_tfmbs.py  txd.py  validate_register_map.py  vivado_flow.tcl  zedboard.xdc
(+3 files in other folders)
